Refactoring - no functional change.